# openstreetmap-mcp

./: .dockerignore  .env.example  .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: release-please.yml  release.yml
docs/: project-plan.md  task-breakdown.md
src/: cache.py  config.py  logging_config.py  server.py
src/clients/: nominatim.py  osrm.py  overpass.py  transit.py
src/tools/: geocoding.py  routing.py  search.py
