[project]
name = "openstreetmap-mcp"
version = "0.1.1"
description = "MCP server providing geospatial awareness capabilities using OpenStreetMap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "fastapi>=0.104.0",
    "httpx>=0.27.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
]
